[gd_scene load_steps=2 format=3 uid="uid://c33yxxd3r6m4w"]

[ext_resource type="Script" path="res://research/research_data_slot.gd" id="1_i6tbe"]

[node name="ResearchDataSlot" type="HBoxContainer"]
size_flags_vertical = 2
script = ExtResource("1_i6tbe")

[node name="L_Name" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = " Name "

[node name="LCost" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="btnIsUnlocked" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Unlocked"

[node name="btnUpgrade" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Upgrade"

[connection signal="pressed" from="HBoxContainer/btnIsUnlocked" to="." method="_on_btn_is_unlocked_pressed"]
[connection signal="pressed" from="HBoxContainer/btnUpgrade" to="." method="_on_btn_upgrade_pressed"]
